# dataset-health-monitor

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements.txt
.github/workflows/: dataset_monitor.yml
app/: __init__.py  app.py  auth.py  webhook.py
badges/: awesome-python-status.json  awesome-python-uptime.json  covid-19-data-status.json  covid-19-data-uptime.json  package-json-sample-status.json  package-json-sample-uptime.json  summary.json
datasets/: datasets.yaml  examples.yaml
scripts/: __init__.py  badges.py  check_files.py  check_links.py  checksum.py  huggingface.py  monitor.py  open_issue.py  schema_check.py  schema_drift.py  state_store.py
state/: dataset_state.json
state/schema_history/: .gitkeep  covid-19-data_schema_history.json  package-json-sample_schema_history.json
state/schema_history/reports/: covid-19-data_drift_report.md  package-json-sample_drift_report.md
