[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-health-monitor"
version = "1.0.0"
description = "Continuous monitoring for ML datasets with automatic GitHub issue creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ritesh Rana", email = "riteshrana36@gmail.com"}
]
maintainers = [
    {name = "Ritesh Rana", email = "riteshrana36@gmail.com"}
]
keywords = [
    "machine-learning",
    "datasets",
    "monitoring",
    "github-actions",
    "data-quality",
    "mlops",
    "ci-cd",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ambicuity/dataset-health-monitor"
Documentation = "https://github.com/ambicuity/dataset-health-monitor#readme"
Repository = "https://github.com/ambicuity/dataset-health-monitor"
Issues = "https://github.com/ambicuity/dataset-health-monitor/issues"

[project.scripts]
dataset-monitor = "scripts.monitor:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstring
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # One blank line before class docstring
    "D213",   # Multi-line docstring summary should start at second line
    "S101",   # Use of assert detected
    "S603",   # subprocess call - check for execution of untrusted input
    "S607",   # Starting a process with a partial executable path
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
